# vicki-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  ingest.py  nginx.conf  pyproject.toml
.github/workflows/: cicd.yml
app/: main.py
app/api/: convention_router.py  webhook_router.py
app/core/: config.py  embedding.py  llm.py  vectordb.py
app/repositories/: retriever.py  vector_repository.py
app/schemas/: response.py  state.py
app/services/: agents.py  builder.py  convention_service.py  github_service.py  nodes.py  prompts.py  tools.py
docs/: retro-10th-week.md  retro-8th-week.md  retro-9th-week.md
src/: graph.py  prompts.py  tools.py
src/api/: main.py
