[project]
name = "vicki-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=49.0.0",
    "fastapi[standard]>=0.139.0",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.7",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.7",
    "langsmith>=0.9.7",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
]
